--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<header>
+<h1>ようこそ　Bookersへ！</h1>
+<p>Bookersではさまざまな書類に関するあなたの意見や<br>
+<br>
+印象を共有し交換することができます</p>
+<nav>
+      <a href="/books">start</a>
+    </nav>
+    </header>
