--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+ {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+h1 {
+    font-size: 25px;
+    font-family: "lmpact";
+}
+heade {
+    mar
+}
+margin-top:     
