--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,76 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+ background-color: #fff;
+    color: #333;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    margin: 33px;
+}
 h1 {
-    font-size: 25px;
-    font-family: "lmpact";
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+p {
+ font-size: 13px;
+ line-height: 18px;
+ margin: 33px;
+ display: block;
+}
+strong {
+ font-weight: bold;
+}
+th {
+     display: table-cell;
+    vertical-align: inherit;
+    font-weight: bold;
+    text-align: -internal-center;
+    padding-bottom: 5px;
+}
+td {
+ display: table-cell;
+    vertical-align: inherit;
+ padding-bottom: 7px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    margin: 33px;
+}
+
+table {
+    border-collapse: separate;
+    text-indent: initial;
+    border-spacing: 2px;
+}
+
+h3 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+a {
+    color: #000;
+    cursor: pointer;
+    text-decoration: underline;
+}
+ 
+label{
+    display: block;
+    cursor: default;
+}
+div.field, div.actions {
+ margin-bottom: 10px;
 }
