--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,21 @@
 <h1>Editing Book</h1>
 <%= form_with model: @book, url:update_book_path(@book.id), method: :patch do |f| %>
-  
-<h4>Title</h4>
-<%=f.text_field:title %>
-<h4>Body</h4>
-<%=f.text_area:body %>
-<%=f.submit'Update Book'%>
-<% end %>
+
+<div class="field">
+    <label for="book_title">Title</label>
+    <input class="book_title" type="text" name="book[title]" id="book_title" />
+  </div>
+
+  <div class="field">
+    <label for="book_body">Body</label>
+    <textarea class="book_body" name="book[body]" id="book_body">
+</textarea>
+  </div>
+
+     <div class="actions">
+         <br><%=f.submit'Update Book' %></br>
+         </div>
+         <%= link_to "Show",book_path(@book.id) %>
+|
+<%= link_to "Back", create_book_path %>
+    <% end %>
