--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,47 @@
 
 <h1>Books</h1>
 <table>
-    <thead><tr><th>title</th>
-    <th>body</th>
-    <th></th></tr></thead><tbody><% @books.each do |book| %>
-    <tr><td>
-        <%=book.title %>
-    </td><td><%=book.body %></td><td><%=link_to "show",book_path(book.id) %>
-    <%=link_to "edit",edit_book_path(book.id) %>
-    <%=link_to "destroy",destroy_book_path(book.id),method: :delete,"data-confirm" =>"Are you sure?"%>
-    </td></tr><% end %></tbody></table>
-    <h3>New Book</h3>
-    <%=form_for(@book) do |f| %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-    <h4>Body</h4>
-    <%= f.text_area :body %>
-    <br><%=f.submit'Create Book' %></br>
+<thead>
+    <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+    </tr></thead>
+    <% @books.each do |book| %>
+    <tbody>
+    <tr><td><%=book.title %> </td>
+        <td><%=book.body %></td>
+        <td><%=link_to "Show",book_path(book.id)%></td>
+   <td> <%=link_to "Edit",edit_book_path(book) %></td>
+<td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %>  </td>    
+    </tr>
     <% end %>
-    
+    </tbody>
+    </table>
+    <h3>New book</h3>
+    <% if @book.errors.any?%>
+<%= @book.errors.count %> errors prohibited this book from being saved
+<ul>
+    <% @book.errors.full_messages.each do |message|%>
+    <li><%= message %></li>
+    <% end %>
+</ul>
+<% end %>
+  <%=form_for(@book) do |f| %>
+   <div class="field">
+    <label for="book_title">Title</label>
+    <input class="book_title" type="text" name="book[title]" id="book_title" />
+  </div>
 
+  <div class="field">
+    <label for="book_body">Body</label>
+    <textarea class="book_body" name="book[body]" id="book_body">
+</textarea>
+  </div>
+
+     <div class="actions">
+           
+    <input type="submit" name="commit" value="Create Book" data-disable-with="Create Book" />
+  </div>
+  </form>
+  <% end %>
