--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,15 @@
-<h2>Title</h2>
-<p><%= @book.title %></p>
-<h2>Body</h2>
-<p><%= @book.body %></p>
+<div>
+    <%=flash[:notice]%>
+</div>
+
+<p>
+    <strong>Title:</strong>
+    <%= @book.title %></p>
+
+<p>
+    <strong>Body:</strong>
+        <%= @book.body %></p>
+
 <%= link_to "Edit",edit_book_path(@book.id) %>
-<%= link_to "Back", create_book_path(@book.id) %>
-<%=link_to 
+|
+<%= link_to "Back", create_book_path %>
