--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,8 @@
-<header>
-<h1>ようこそ　Bookersへ！</h1>
-<p>Bookersではさまざまな書類に関するあなたの意見や<br>
-<br>
+
+<h1>ようこそ<strong>Bookers</strong>へ！</h1>
+<p><strong>Bookers</strong>ではさまざまな書類に関するあなたの意見や</p>
+<p>
 印象を共有し交換することができます</p>
-<nav>
+<p>
       <a href=/books>start</a>
-    </nav>
-    </header>
+    </p>
