--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,6 @@
-<div>
+<div class="text-success">
     <%=flash[:notice]%>
-</div>
-
+    </div>
 <p>
     <strong>Title:</strong>
     <%= @book.title %></p>
