--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -25,6 +25,9 @@ body {
     font-size: 13px;
     line-height: 18px;
     margin: 33px;
+}
+#notice {
+ color: green;
 }
 h1 {
     display: block;
