--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,21 @@
 <h1>Editing Book</h1>
+<% if @book.errors.any?%>
+<%= @book.errors.count %> errors prohibited this book from being saved
+<ul>
+    <% @book.errors.full_messages.each do |message|%>
+    <li><%= message %></li>
+    <% end %>
+</ul>
+<% end %>
 <%= form_with model: @book, url:update_book_path(@book.id), method: :patch do |f| %>
 
 <div class="field">
-    <label for="book_title">Title</label>
-    <input class="book_title" type="text" name="book[title]" id="book_title" />
-  </div>
-
+   
+<label for="book_title">Title</label><%= f.text_field :title %></div>
   <div class="field">
-    <label for="book_body">Body</label>
-    <textarea class="book_body" name="book[body]" id="book_body">
-</textarea>
-  </div>
+      <label for="book_body">Body</label>
+    <%= f.text_area :body %></div>
+  
 
      <div class="actions">
          <br><%=f.submit'Update Book' %></br>
@@ -19,3 +24,4 @@
 |
 <%= link_to "Back", create_book_path %>
     <% end %>
+      
